--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sciserver2.0-next",
+  "name": "turbulence-web",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -17,21 +17,45 @@
     "@mui/material": "^5.10.16",
     "@mui/styled-engine": "^5.10.16",
     "@mui/styled-engine-sc": "^5.10.16",
+    "@mui/system": "^5.15.20",
     "@types/node": "18.11.10",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
     "eslint": "8.28.0",
-    "eslint-config-next": "13.0.5",
+    "eslint-config-next": "^14.2.5",
     "graphql": "^16.6.0",
     "next": "13.0.5",
     "next-transpile-modules": "^10.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "styled-components": "^5.3.6",
+    "styled-components": "^6.0.0",
+    "stylis": "^4.0.0",
     "typescript": "4.9.3"
   },
-  "devDependencies": {
+  "resolutions": {
+    "@types/react": "17.0.14",
+    "@types/react-dom": "17.0.14",
     "@types/styled-components": "^5.1.26",
-    "babel-plugin-styled-components": "^2.0.7"
+    "**/@typescript-eslint/eslint-plugin": "^4.1.1",
+    "**/@typescript-eslint/parser": "^4.1.1"
+  },
+  "devDependencies": {
+    "@simbathesailor/use-what-changed": "^2.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.45.1",
+    "@typescript-eslint/parser": "^5.45.1",
+    "babel-plugin-styled-components": "^2.0.7",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-airbnb-typescript": "^17.0.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-eslint-comments": "^3.2.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jest": "^27.1.6",
+    "eslint-plugin-jsx-a11y": "^6.6.1",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-react": "^7.31.11",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-unicorn": "^45.0.1",
+    "prettier": "^2.8.1"
   }
 }
