--- a/package.json
+++ b/package.json
@@ -18,32 +18,33 @@
     "@mui/styled-engine": "^5.10.16",
     "@mui/styled-engine-sc": "^5.10.16",
     "@mui/system": "^5.15.20",
+    "@supabase/supabase-js": "^2.51.0",
     "@types/node": "18.11.10",
-    "@types/react": "18.0.25",
-    "@types/react-dom": "18.0.9",
     "eslint": "8.28.0",
     "eslint-config-next": "^14.2.5",
     "graphql": "^16.6.0",
-    "next": "13.0.5",
-    "next-transpile-modules": "^10.0.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "styled-components": "^6.0.0",
+    "next": "^14.2.5",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-is": "^19.1.0",
+    "styled-components": "^5.3.11",
     "stylis": "^4.0.0",
     "typescript": "4.9.3"
   },
   "resolutions": {
-    "@types/react": "17.0.14",
-    "@types/react-dom": "17.0.14",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0",
     "@types/styled-components": "^5.1.26",
     "**/@typescript-eslint/eslint-plugin": "^4.1.1",
     "**/@typescript-eslint/parser": "^4.1.1"
   },
   "devDependencies": {
     "@simbathesailor/use-what-changed": "^2.0.0",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0",
     "@typescript-eslint/eslint-plugin": "^5.45.1",
     "@typescript-eslint/parser": "^5.45.1",
-    "babel-plugin-styled-components": "^2.0.7",
+    "babel-plugin-styled-components": "2.1.4",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-typescript": "^17.0.0",
     "eslint-config-prettier": "^8.5.0",
