--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "types:generate": "supabase gen types typescript --project-id=chhrevjvhkpupcoatxac > src/types/supabase.ts"
   },
   "dependencies": {
     "@apollo/client": "^3.7.1",
@@ -18,6 +19,7 @@
     "@mui/styled-engine": "^5.10.16",
     "@mui/styled-engine-sc": "^5.10.16",
     "@mui/system": "^5.15.20",
+    "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.51.0",
     "@types/node": "18.11.10",
     "eslint": "8.28.0",
@@ -57,6 +59,7 @@
     "eslint-plugin-react": "^7.31.11",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-unicorn": "^45.0.1",
-    "prettier": "^2.8.1"
+    "prettier": "^2.8.1",
+    "supabase": "^2.31.8"
   }
 }
